--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,40 @@
 }
 
 body{
-  background-color: rgb(86, 83, 83);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   padding: 2rem;
 
 }
 
 .lucky-cookie{
-  background-color: white;
+  position:relative;
+  background-color:aliceblue;
   text-align: center;
   padding: 2rem;
   border-radius: .5rem;
-  max-width: 500px;
+  max-width: 600px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 1);
   margin: 0 auto;
+}
+
+.btn-position{
+  position:absolute;
+  display:block;
+  padding: 2rem 6rem;
+}
+
+.btn-lucky{
+  border-radius: .5rem;
+  background-color:aliceblue;
+  letter-spacing: .1rem;
+  font-size: medium;
+  padding: .5rem ;
+  box-shadow: 0 0 1rem darkslategray ;
+}
+
+.author{
+  letter-spacing: .1rem;
+  font-size:large;
+  padding: 1rem ;
+  text-align: center;
 }
