--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ body{
 }
 
 .author{
+  position: relative;
   background-color:aliceblue;
   text-align: center;
   padding: 2rem;
@@ -52,4 +53,5 @@ body{
   padding: 1rem ;
   text-align: center;
   font-style: italic;
+  margin:0 auto;
 }
